# ksysguardd-powercap

./: CMakeLists.txt  LICENSE  main.cpp
